# spider-web-app

./: .gitignore  README.md  docker-compose.yaml
front-spider-web/: .dockerignore  .env  .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc.json  Dockerfile  docker-compose.yaml  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
front-spider-web/apis/spider-back/: axios-config.js  external-documents.js  search.js  (+1 more)
front-spider-web/src/: App.vue  main.js
front-spider-web/utils/: function-utils.js  string-utils.js
spider-web/: .dockerignore  .env.db  .env.db.example  .gitignore  Dockerfile  README.md  docker-compose.debug.yaml  docker-compose.yaml  manage.py  pyproject.toml  start_container.sh
spider-web-front/: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json
spider-web/.ide-assistant/vscode/: docker-compose.yaml  launch.json
spider-web/core/: API.md  models.py  serializers.py  urls.py  views.py  viewsets.py
spider-web/core/migrations/: 0001_initial.py  0002_document.py  0003_externalfilesnippetassociateddocument.py  0004_document_name_document_path.py  0005_document_inserted_at.py  0006_externaldocument_tag_externaldocument_tag.py  0007_alter_document_inserted_at_and_more.py  0008_document_description.py  0009_document_description_search_vector_and_more.py  0010_externaldocument_description.py  0011_externaldocument_description_search_vector_and_more.py  0012_queuetoupdatedescriptionsearchvector.py  0013_delete_queuetoupdatedescriptionsearchvector.py
spider-web/docker/commands/: pre_start.sh
spider-web/project-support/.ide-assistant/vscode/: launch.json  tasks.json
spider-web/project-support/setup/scripts/: initial_setup.sh
spider-web/spider_web/: asgi.py  settings.py  urls.py  wsgi.py
(+34 files in other folders)
